@@ -1,3 +1,9 @@
+2002-06-10  Anders Eriksson  <anders@poirot.faldor.umunet.org>
+
+	* src/gerbv.c: Centered outline zoom uses shift instead of control,
+	  use shift before clicking with button three to initiate centered
+	  outline zoom (rm:ed switching between centered and plain outline).
+
 2002-06-09  Anders Eriksson  <anders@umunet.org>
 
 	* src/gerbv.c: Fix actual zoomed area for centered outline zooming.
